[package]
name = "tomato-timer"
version = "0.4.1"
authors = ["sigoden <sigoden@gmail.com>"]
edition = "2021"
description = """
Simple timer for pomodoro technique
"""
repository = "https://github.com/sigoden/tomato-timer"
keywords = ["terminal", "fonts"]
exclude = ["assets/*", ".github"]
readme = "README.md"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
tui = "0.19.0"
crossterm = {version = "0.27.0"}
terminal-fonts = "0.1.0"
notify-rust = "4.10.0"
tokio = { version = "1.34.0", features = ["full"] }

[profile.release]
lto = true
strip = true
opt-level = "z"
